Reduced card swatch border radius to avoid spacing artifacts

--- a/src/_styles/theme.scss
+++ b/src/_styles/theme.scss
@@ -291,7 +291,7 @@ body {
 }
 
 .findify-search-full-wrapper .findify-components--cards-product__color-ball {
-  border-radius: 7px !important;
+  border-radius: 5px !important;
 }
 
 .findify-product-color-swatches-wrapper .findify-components--cards-product__color-item_active {
